fix alignment

--- a/style.css
+++ b/style.css
@@ -59,9 +59,10 @@ main{
 }
 
 #avatar{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    width: 15%;
+    width: 10%;
     height: 100%;
     padding: 5px 0;
 }
@@ -91,7 +92,6 @@ main{
     width: 50px;   
     height:min- auto;
     justify-items: center;
-
     align-self: center;
 }
 
@@ -100,7 +100,7 @@ main{
     flex-wrap: wrap;
     justify-content: space-around;
     width: 60%;
-    aspect-ratio: 1/1;
+    height: 100%;
     padding: 5px 0;
 }
 
@@ -145,7 +145,7 @@ main{
     flex-direction: column;
     justify-content:space-between;
     /* align-items: flex-end; */
-    width: 30%;
+    width: 25%;
     height:100%;
     padding: 5px 0;
 }
